k8s/gitlab/gitlab-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitlab-stripprefix
  namespace: gitlab
spec:
  stripPrefix:
    prefixes:
      - /lab
